Add some more flags to allow things to work with Java 25